--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -294,6 +294,7 @@ form.search {
 
 			width: 100%;
 			padding: 11px 20px 11px 70px;
+			margin: 0;
 			font-style: normal;
 			font-weight: normal;
 			font-size: 18px;
